update projeto atualização na tela veiculos

--- a/velocity/src/main/webapp/pages/veiculos/controle.xhtml
+++ b/velocity/src/main/webapp/pages/veiculos/controle.xhtml
@@ -61,7 +61,7 @@
                     </h:panelGrid>
                      <h:panelGrid columns="2" style="margin: 0 auto; margin-top:  20px; text-align: center!important;">
                           <p:commandButton value="Salvar" icon="ui-icon-disk" iconPos="true" actionListener="#{cadModeloVeiculoBean.salvar()}" />
-                          <p:commandButton value="Fechar" icon="ui-icon-cancel" process="@this" iconPos="true" actionListener="#{cadModeloVeiculoBean.salvar()}" />
+                          <p:commandButton value="Fechar" icon="ui-icon-cancel" process="@this" iconPos="true"/>
                          </h:panelGrid>
                 </p:dialog>
             </h:form>
