--- a/velocity/src/main/webapp/pages/veiculos/controle.xhtml
+++ b/velocity/src/main/webapp/pages/veiculos/controle.xhtml
@@ -143,6 +143,18 @@
                         </f:facet>
                         <h:outputText value="#{item.placa}"/>
                     </p:column>
+                     <p:column>
+                        <f:facet name="header">
+                            <h:outputText value="Serviços"/>
+                        </f:facet>
+                        <p:commandButton value="" icon="ui-icon-plus" styleClass="botaoIcon" actionListener="#{cadModeloVeiculoBean.urlControleServicos(item.idModelo)}" title="Serviço" />
+                    </p:column>
+                     <p:column>
+                        <f:facet name="header">
+                            <h:outputText value="Aluguel"/>
+                        </f:facet>
+                         <p:commandButton value="" icon="ui-icon-plus" styleClass="botaoIcon" actionListener="#{cadModeloVeiculoBean.urlControleVeiculos(item.idModelo)}" title="Aluguel" />
+                    </p:column>
                     <p:column>
                         <f:facet name="header">
                             <h:outputText value="Ação" />
