--- a/velocity/src/main/webapp/pages/controleveiculos/controleVeiculos.xhtml
+++ b/velocity/src/main/webapp/pages/controleveiculos/controleVeiculos.xhtml
@@ -8,7 +8,66 @@
                 xmlns:p="http://primefaces.org/ui">
 
     <ui:define name="conteudo">
+        
+        <f:view>
+            <h:form id="forEscolha">
+                
+            </h:form>
+        </f:view>
 
+        <f:view>
+            <h:form id="formServicos">
+                <p:dialog closable="true" header="Controle" widgetVar="dgServico" id="dgServico"  visible="true"
+                          style="margin-top:130px!important; max-height: 80%!important; z-index: 2!important;">
+                    <h:panelGrid columns="1">
+                        <p:selectOneMenu id="veiculo2" value="#{controleVeiculosBean.veiculo}" converter="cadModeloVeiculosConverter" panelStyle="width:180px"
+                                         effect="fade" var="tv" style="width:280px" filter="true" filterMatchMode="startsWith" label="Veiculos">
+                            <f:selectItem itemLabel="Selecione Veiculo..." itemValue="" />
+                            <f:selectItems value="#{controleVeiculosBean.listaModeloVeiculos}" var="veicc"  itemValue="#{veicc}" itemLabel="#{veicc.modelo}"/>
+                            <p:column>
+                                <f:facet name="header">
+                                    <h:outputText value="Veículo"/>
+                                </f:facet>
+                                <h:outputText value="#{tv.modelo}"  />
+                            </p:column>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="Cod. Serviço:" for="codServico" />
+                        <p:inputText id="codServico" value="#{controleVeiculosBean.cadServicos.codigoServico}" title="Cod. Serviço" />
+                        <p:outputLabel value="Nome Serviço:" for="nomeServico" />
+                        <p:inputText id="nomeServico" value="#{controleVeiculosBean.cadServicos.nomeServico}" title="NomeServico" />
+                        <p:outputLabel value="Tipo Servico:" for="tipoServico" />
+                        <p:inputText id="tipoServico" value="#{controleVeiculosBean.cadServicos.tipoServico}" title="TipoServico" />
+                        <p:outputLabel value="Descrição:" for="descricao" />
+                        <p:inputText id="descricao" value="#{controleVeiculosBean.cadServicos.descricao}" title="Descricao" size="100"/>
+                        <h:panelGrid style="margin: 0 auto; text-align: center; margin-top: 20px;" columns="2">
+                            <p:commandButton value="Salvar" actionListener="#{controleVeiculosBean.salvarServico()}" oncomplete="PF('dgServico').hide()" />
+                            <p:commandButton value="fechar" process="@this" onclick="PF('dgServico').hide()" />
+                        </h:panelGrid>
+                    </h:panelGrid>
+                </p:dialog>
+            </h:form>
+        </f:view>
+        <f:view>
+            <h:form id="formServicos2">
+                <p:dialog closable="true" header="Controle" widgetVar="dgServico2" id="dgServico2"  visible="true"
+                          style="margin-top:130px!important; max-height: 80%!important; z-index: 2!important;">
+                    <h:panelGrid columns="2">
+                    <p:outputLabel value="Cod. Serviço:" for="codServico2" />
+                    <p:inputText id="codServico2" value="#{controleVeiculosBean.cadServicos.codigoServico}" title="Cod. Serviço" />
+                    <p:outputLabel value="Nome Serviço:" for="nomeServico2" />
+                    <p:inputText id="nomeServico2" value="#{controleVeiculosBean.cadServicos.nomeServico}" title="NomeServico" />
+                    <p:outputLabel value="Tipo Servico:" for="tipoServico2" />
+                    <p:inputText id="tipoServico2" value="#{controleVeiculosBean.cadServicos.tipoServico}" title="TipoServico" />
+                    <p:outputLabel value="Descrição:" for="descricao2" />
+                    <p:inputText id="descricao2" value="#{controleVeiculosBean.cadServicos.descricao}" title="Descricao" size="100"/>
+                    </h:panelGrid>
+                    <h:panelGrid style="margin: 0 auto; text-align: center; margin-top: 20px;" columns="2">
+                        <p:commandButton value="Salvar" actionListener="#{controleVeiculosBean.salvarServico()}" oncomplete="PF('dgServico2').hide()" />
+                        <p:commandButton value="fechar" process="@this" onclick="PF('dgServico2').hide()" />
+                    </h:panelGrid>
+                </p:dialog>
+            </h:form>
+        </f:view>
         <f:view>
             <h:form id="formCadCV">
                 <p:dialog closable="true" header="Controle" widgetVar="dglVControle" id="dglVControle"  
@@ -71,7 +130,7 @@
                                                  maxlength="5000" 
                                                  counterTemplate="{0} caracteres restantes." 
                                                  autoResize="false" />
-                                 <br />
+                                <br />
                                 <h:outputText id="entradaum" />
                             </p:fieldset>
                         </h:panelGrid>
@@ -115,8 +174,8 @@
                         </p:fieldset>
                     </h:panelGrid>
                     <h:panelGrid style="margin: 0 auto; text-align: center; margin-top: 20px;" columns="2">
-                    <p:commandButton value="Salvar" actionListener="#{controleVeiculosBean.salvar()}" oncomplete="PF('dglVControle').hide()" />
-                    <p:commandButton value="fechar" process="@this" onclick="PF('dglVControle').hide()" />
+                        <p:commandButton value="Salvar" actionListener="#{controleVeiculosBean.salvar()}" oncomplete="PF('dglVControle').hide()" />
+                        <p:commandButton value="fechar" process="@this" onclick="PF('dglVControle').hide()" />
                     </h:panelGrid>
                 </p:dialog>
             </h:form>
@@ -128,9 +187,6 @@
                              paginator="true" rows="10" style="font-size: 13px!important">
                     <f:facet name="header">
                         <h3>Controle de Veículos</h3>
-                        <div style="float: right">
-                            <p:commandButton value="Novo" actionListener="#{controleVeiculosBean.limpar()}"  icon="ui ui-icon-plus"/>
-                        </div>
                     </f:facet>
                     <p:column>
                         <f:facet name="header">
@@ -164,27 +220,9 @@
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="Condições Veiculo Saida"/>
+                            <h:outputText value="Serviços"/>
                         </f:facet>
-                        <h:outputText value="#{item.condicoesVeiculoSaida}"/>
-                    </p:column>
-                    <p:column>
-                        <f:facet name="header">
-                            <h:outputText value="Condições Veiculo Retorno"/>
-                        </f:facet>
-                        <h:outputText value="#{item.condicoesVeiculoRetorno}"/>
-                    </p:column>
-                    <p:column>
-                        <f:facet name="header">
-                            <h:outputText value="Resposavel Pelo Veiculo"/>
-                        </f:facet>
-                        <h:outputText value="#{item.resposavelPeloVeiculo}"/>
-                    </p:column>
-                    <p:column>
-                        <f:facet name="header">
-                            <h:outputText value="HistoricoReparosFk"/>
-                        </f:facet>
-                        <h:outputText value="#{item.historicoReparosFk}"/>
+                        <p:commandButton value="Novo" actionListener="#{controleVeiculosBean.novoCadServico()}"  icon="ui ui-icon-plus"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
@@ -228,8 +266,20 @@
                     <h1>Atenção</h1>
                     <h3>Confirmar a remoção?</h3>
                     <h:panelGrid columns="2">
-                        <p:commandButton value="SIM" actionListener="#{cadModeloVeiculoBean.deletar()}" oncomplete="PF('dlgConfCv')hide();"/>
+                        <p:commandButton value="SIM" actionListener="#{controleVeiculosBean.deletar()}" oncomplete="PF('dlgConfCv')hide();"/>
                         <p:commandButton value="NÃO" onclick="PF('dlgConfCv').hide();" process="@this"/>
+                    </h:panelGrid>
+                </h:panelGrid>
+            </p:dialog>
+        </h:form>
+        <h:form id="formDeletarServico">
+            <p:dialog header="Dados" widgetVar="dlgConfServico" id="dlgConfServico" showEffect="explode">
+                <h:panelGrid columns="1">
+                    <h1>Atenção</h1>
+                    <h3>Confirmar a remoção?</h3>
+                    <h:panelGrid columns="2">
+                        <p:commandButton value="SIM" actionListener="#{controleVeiculosBean.deletarCadServico()}" oncomplete="PF('dlgConfServico')hide();"/>
+                        <p:commandButton value="NÃO" onclick="PF('dlgConfServico').hide();" process="@this"/>
                     </h:panelGrid>
                 </h:panelGrid>
             </p:dialog>
