--- a/velocity/src/main/webapp/pages/home.xhtml
+++ b/velocity/src/main/webapp/pages/home.xhtml
@@ -38,14 +38,14 @@
 
             function valor(v) {
                 v = v.replace(/\D/g, "");
-                v = v.replace(/[0-9]{15}/, "invÃ¡lido");
-                v = v.replace(/(\d{1})(\d{12})$/, "$1.$2"); // coloca ponto antes dos
+                v = v.replace(/[0-9]{15}/, "inválido");
+                v = v.replace(/(\d{1})(\d{11})$/, "$1.$2"); // coloca ponto antes dos
                 // Ãºltimos 11 digitos
-                v = v.replace(/(\d{1})(\d{9})$/, "$1.$2"); // coloca ponto antes dos
+                v = v.replace(/(\d{1})(\d{8})$/, "$1.$2"); // coloca ponto antes dos
                 // Ãºltimos 8 digitos
-                v = v.replace(/(\d{1})(\d{6})$/, "$1.$2"); // coloca ponto antes dos
+                v = v.replace(/(\d{1})(\d{5})$/, "$1.$2"); // coloca ponto antes dos
                 // Ãºltimos 5 digitos
-                v = v.replace(/(\d{1})(\d{1,3})$/, "$1,$2"); // coloca virgula antes dos
+                v = v.replace(/(\d{1})(\d{1,2})$/, "$1,$2"); // coloca virgula antes dos
                 // Ãºltimos 3 digitos
                 return v;
 
@@ -68,13 +68,11 @@
                 </h:form>
             </p:layoutUnit>
 
-            <p:layoutUnit position="south" size="100" closable="false" collapsible="false" resizable="false">
+            <p:layoutUnit position="south" size="60" closable="false" collapsible="false" resizable="false">
                 <f:view>
                     <h:form>
-                        <h:panelGrid columns="3" style="margin: 0 auto; text-align: center;">
-                            <h:outputText value="TODOS DIREITOS RESERVADOS : &copy; VELOCITY RENT A CAR .  " />
-                            <p:clock pattern="yyyy" mode="server" />
-                            <h:outputText value=". Desenvolvido por:  ELM Soluções." />
+                        <h:panelGrid columns="1" style="margin: 0 auto; text-align: center;">
+                            <h:outputText value="&copy; #{rodapeBean.rodape}" />
                         </h:panelGrid>
                     </h:form>
                 </f:view>
@@ -86,13 +84,13 @@
                     <p:panelMenu>
                         <p:submenu label="Cadastro">
                             <p:menuitem value="Clientes" outcome="/pages/clientes/lista" icon="ui-icon-triangle-1-e"/>
-                            <p:menuitem value="Controle De Veículos" outcome="/pages/controleveiculos/controleVeiculos" icon="ui-icon-triangle-1-e"/>
                             <p:menuitem value="Email" outcome="/pages/email/lista" icon="ui-icon-triangle-1-e"/>
                             <p:menuitem value="Endereço" outcome="/pages/endereco/lista" icon="ui-icon-triangle-1-e"/>
-                            <p:menuitem value="Fornecedores" outcome="/pages/fornecedor/controle" icon="ui-icon-triangle-1-e"/>
+                            <p:menuitem value="Fornecedores" outcome="/pages/fornecedor/controleFornecedor" icon="ui-icon-triangle-1-e"/>
                             <p:menuitem value="Funcionarios" outcome="/pages/funcionario/controle" icon="ui-icon-triangle-1-e"/>
                             <p:menuitem value="Habilitação" outcome="/pages/habilitacao/lista" icon="ui-icon-triangle-1-e"/>
                             <p:menuitem value="Imagens" outcome="/pages/imagens/contoleImagens" icon="ui-icon-triangle-1-e"/>
+                            <p:menuitem value="Serviços" outcome="/pages/servicos/controleServicos" icon="ui-icon-triangle-1-e"/>
                             <p:menuitem value="Telefone" outcome="/pages/telefone/lista" icon="ui-icon-triangle-1-e"/>
                             <p:menuitem value="Usuários" outcome="/pages/usuarios/cadastro" icon="ui-icon-triangle-1-e" />                         
                             <p:menuitem value="Veículos" outcome="/pages/veiculos/controle" icon="ui-icon-triangle-1-e"/>
