--- a/velocity/src/main/webapp/pages/veiculos/controle.xhtml
+++ b/velocity/src/main/webapp/pages/veiculos/controle.xhtml
@@ -14,55 +14,55 @@
                     <p:messages showDetail="true">
                         <p:autoUpdate />
                     </p:messages>
-                     <p:inputText id="idModelo" value="#{cadModeloVeiculoBean.modeloVeiculo.idModelo}" title="IdModelo"  type="hidden"/>
+                    <p:inputText id="idModelo" value="#{cadModeloVeiculoBean.modeloVeiculo.idModelo}" title="IdModelo"  type="hidden"/>
                     <h:panelGrid columns="3">
                         <h:panelGrid columns="1">
-                        <p:outputLabel value="Fabricante:" for="fabricante" />
-                        <p:inputText id="fabricante" value="#{cadModeloVeiculoBean.modeloVeiculo.fabricante}" title="Fabricante" 
-                                     required="true" requiredMessage="Fabricante não pode ser vazio." onkeyup="value = value.toUpperCase()" />
+                            <p:outputLabel value="Fabricante:" for="fabricante" />
+                            <p:inputText id="fabricante" value="#{cadModeloVeiculoBean.modeloVeiculo.fabricante}" title="Fabricante" 
+                                         required="true" requiredMessage="Fabricante não pode ser vazio." onkeyup="value = value.toUpperCase()" />
                         </h:panelGrid>
                         <h:panelGrid columns="1">
-                        <p:outputLabel value="Modelo:" for="modelo" />
-                        <p:inputText id="modelo" value="#{cadModeloVeiculoBean.modeloVeiculo.modelo}" title="Modelo" required="true" 
-                                     requiredMessage="Modelo não pode ser vazio." onkeyup="value = value.toUpperCase()" />
+                            <p:outputLabel value="Modelo:" for="modelo" />
+                            <p:inputText id="modelo" value="#{cadModeloVeiculoBean.modeloVeiculo.modelo}" title="Modelo" required="true" 
+                                         requiredMessage="Modelo não pode ser vazio." onkeyup="value = value.toUpperCase()" />
                         </h:panelGrid>
                         <h:panelGrid columns="1">
-                        <p:outputLabel value="Passageiros:" for="passageiros" />
-                        <p:inputText id="passageiros" value="#{cadModeloVeiculoBean.modeloVeiculo.passageiros}" title="Passageiros" />
+                            <p:outputLabel value="Passageiros:" for="passageiros" />
+                            <p:inputText id="passageiros" value="#{cadModeloVeiculoBean.modeloVeiculo.passageiros}" title="Passageiros" />
                         </h:panelGrid>
                         <h:panelGrid columns="1">
-                        <p:outputLabel value="Portas:" for="portas" />
-                        <p:inputText id="portas" value="#{cadModeloVeiculoBean.modeloVeiculo.portas}" title="Portas" />
+                            <p:outputLabel value="Portas:" for="portas" />
+                            <p:inputText id="portas" value="#{cadModeloVeiculoBean.modeloVeiculo.portas}" title="Portas" />
                         </h:panelGrid>
                         <h:panelGrid columns="1">
-                        <p:outputLabel value="Croqui:" for="croquiFk" />
-                        <p:inputText id="croquiFk" value="#{cadModeloVeiculoBean.modeloVeiculo.croquiFk}" title="CroquiFk" />
+                            <p:outputLabel value="Croqui:" for="croquiFk" />
+                            <p:inputText id="croquiFk" value="#{cadModeloVeiculoBean.modeloVeiculo.croquiFk}" title="CroquiFk" />
                         </h:panelGrid>
                         <h:panelGrid columns="1">
-                        <p:outputLabel value="Protecao:" for="protecaoFk" />
-                        <p:inputText id="protecaoFk" value="#{cadModeloVeiculoBean.modeloVeiculo.protecaoFk}" title="ProtecaoFk" />
+                            <p:outputLabel value="Apólice" for="protecaoFk" />
+                            <p:inputText id="protecaoFk" value="#{cadModeloVeiculoBean.modeloVeiculo.protecaoFk}" title="Apolice" />
                         </h:panelGrid>
                         <h:panelGrid columns="1">
-                        <p:outputLabel value="Checklist:" for="checklist" />
-                        <p:inputText id="checklist" value="#{cadModeloVeiculoBean.modeloVeiculo.checklist}" title="Checklist" onkeyup="value = value.toUpperCase()" />
+                            <p:outputLabel value="Checklist:" for="checklist" />
+                            <p:inputText id="checklist" value="#{cadModeloVeiculoBean.modeloVeiculo.checklist}" title="Checklist" onkeyup="value = value.toUpperCase()" />
                         </h:panelGrid>
                         <h:panelGrid columns="1">
-                        <p:outputLabel value="Bagagem:" for="bagagem" />
-                        <p:inputText id="bagagem" value="#{cadModeloVeiculoBean.modeloVeiculo.bagagem}" title="Bagagem"/>
+                            <p:outputLabel value="Bagagem:" for="bagagem" />
+                            <p:inputText id="bagagem" value="#{cadModeloVeiculoBean.modeloVeiculo.bagagem}" title="Bagagem"/>
                         </h:panelGrid>
                         <h:panelGrid columns="1">
-                        <p:outputLabel value="Tanque:" for="tanque" />
-                        <p:inputText id="tanque" value="#{cadModeloVeiculoBean.modeloVeiculo.tanque}" title="Tanque" />
-                         </h:panelGrid>
+                            <p:outputLabel value="Tanque:" for="tanque" />
+                            <p:inputText id="tanque" value="#{cadModeloVeiculoBean.modeloVeiculo.tanque}" title="Tanque" />
+                        </h:panelGrid>
                         <h:panelGrid columns="1">
-                         <p:outputLabel value="Placa:" for="placa" />
-                         <p:inputText id="placa" value="#{cadModeloVeiculoBean.modeloVeiculo.placa}" title="placa"  onkeyup="value = value.toUpperCase()" />
+                            <p:outputLabel value="Placa:" for="placa" />
+                            <p:inputText id="placa" value="#{cadModeloVeiculoBean.modeloVeiculo.placa}" title="placa"  onkeyup="value = value.toUpperCase()" />
                         </h:panelGrid>
                     </h:panelGrid>
-                     <h:panelGrid columns="2" style="margin: 0 auto; margin-top:  20px; text-align: center!important;">
-                          <p:commandButton value="Salvar" icon="ui-icon-disk" iconPos="true" actionListener="#{cadModeloVeiculoBean.salvar()}" />
-                          <p:commandButton value="Fechar" icon="ui-icon-cancel" process="@this" iconPos="true"/>
-                         </h:panelGrid>
+                    <h:panelGrid columns="2" style="margin: 0 auto; margin-top:  20px; text-align: center!important;">
+                        <p:commandButton value="Salvar" icon="ui-icon-disk" iconPos="true" actionListener="#{cadModeloVeiculoBean.salvar()}" />
+                        <p:commandButton value="Fechar" icon="ui-icon-cancel" process="@this" iconPos="true"/>
+                    </h:panelGrid>
                 </p:dialog>
             </h:form>
         </f:view>
@@ -73,8 +73,8 @@
                     <p:autoUpdate />
                 </p:messages>
                 <p:dataTable  value="#{cadModeloVeiculoBean.listaDeMVeiculos}" var="item"
-                             emptyMessage="Não a dados para exibir" 
-                             paginator="true" rows="10" style="font-size: 13px!important">
+                              emptyMessage="Não a dados para exibir" 
+                              paginator="true" rows="10" style="font-size: 13px!important">
                     <f:facet name="header">
                         <h3>Lista de Veículos</h3>
                         <div style="float: right">
@@ -113,17 +113,14 @@
                         <p:commandButton value="" icon="ui-icon-plus" styleClass="botaoIcon" actionListener="#{cadModeloVeiculoBean.urlImagem(item.idModelo)}" title="Nova" />
                         <p:commandButton value="" icon="ui-icon-pencil" styleClass="botaoIcon" actionListener="#{cadModeloVeiculoBean.urlEditaImagem(item.idModelo)}" title="Editar" />
                     </p:column>
+
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="ProtecaoFk"/>
+                            <h:outputText value="Disponível"/>
                         </f:facet>
-                        <h:outputText value="#{item.protecaoFk}"/>
-                    </p:column>
-                    <p:column>
-                        <f:facet name="header">
-                            <h:outputText value="Checklist"/>
-                        </f:facet>
-                        <h:outputText value="#{item.checklist}"/>
+                        <h:outputText value="#{cadModeloVeiculoBean.disponivelVeiculo(item.disponivel)}"/>
+                        <p:commandButton value="" icon="ui-icon-search" styleClass="botaoIcon" actionListener="#{cadModeloVeiculoBean.mostrarMotivo(item.motivo)}" title="foto"  />
+
                     </p:column>
                     <p:column>
                         <f:facet name="header">
@@ -143,17 +140,23 @@
                         </f:facet>
                         <h:outputText value="#{item.placa}"/>
                     </p:column>
-                     <p:column>
+                    <p:column>
+                        <f:facet name="header">
+                            <h:outputText value="Apólice"/>
+                        </f:facet>
+                        <h:outputText value="#{item.protecaoFk}"/>
+                    </p:column>                
+                    <p:column>
                         <f:facet name="header">
                             <h:outputText value="Serviços"/>
                         </f:facet>
                         <p:commandButton value="" icon="ui-icon-plus" styleClass="botaoIcon" actionListener="#{cadModeloVeiculoBean.urlControleServicos(item.idModelo)}" title="Serviço" />
                     </p:column>
-                     <p:column>
+                    <p:column>
                         <f:facet name="header">
                             <h:outputText value="Aluguel"/>
                         </f:facet>
-                         <p:commandButton value="" icon="ui-icon-plus" styleClass="botaoIcon" actionListener="#{cadModeloVeiculoBean.urlControleVeiculos(item.idModelo)}" title="Aluguel" />
+                        <p:commandButton value="" icon="ui-icon-plus" styleClass="botaoIcon" actionListener="#{cadModeloVeiculoBean.urlControleVeiculos(item.idModelo)}" title="Aluguel" />
                     </p:column>
                     <p:column>
                         <f:facet name="header">
@@ -165,30 +168,40 @@
                 </p:dataTable>
             </h:form>
         </f:view>
-            <h:form id="forCmvConf">
-                <p:dialog header="Dados" widgetVar="dlgConf" showEffect="explode">
-                    <h:panelGrid columns="1">
-                        <p:inputText value="#{cadModeloVeiculoBean.modeloVeiculo.idModelo}" type="hidden"/>
-                        <h1>Atenção</h1>
-                        <h3>Confirmar a remoção?</h3>
-                        <h:panelGrid columns="2">
-                            <p:commandButton value="SIM" actionListener="#{cadModeloVeiculoBean.deletar()}" oncomplete="PF('dlgConf')hide();"/>
-                            <p:commandButton value="NÃO" onclick="PF('dlgConf')hide();"/>
-                        </h:panelGrid>
+        <h:form id="forCmvConf">
+            <p:dialog header="Dados" widgetVar="dlgConf" showEffect="explode">
+                <h:panelGrid columns="1">
+                    <p:inputText value="#{cadModeloVeiculoBean.modeloVeiculo.idModelo}" type="hidden"/>
+                    <h1>Atenção</h1>
+                    <h3>Confirmar a remoção?</h3>
+                    <h:panelGrid columns="2">
+                        <p:commandButton value="SIM" actionListener="#{cadModeloVeiculoBean.deletar()}" oncomplete="PF('dlgConf')hide();"/>
+                        <p:commandButton value="NÃO" onclick="PF('dlgConf')hide();"/>
                     </h:panelGrid>
-                </p:dialog>
-            </h:form>
+                </h:panelGrid>
+            </p:dialog>
+        </h:form>
         <h:form id="formImg">
-                <p:dialog header="Dados" widgetVar="dlgImg" showEffect="explode">
-                    <h:panelGrid columns="1">
+            <p:dialog header="Dados" widgetVar="dlgImg" showEffect="explode">
+                <h:panelGrid columns="1">
 
-                        <h:panelGrid columns="1">
-                            <p:graphicImage value="#{clienteBean.caminhoDaImagem}" width="650" height="450"/>
-                            <p:commandButton value="X" onclick="PF('dlgConf')hide();" ajax="true"/>
-                        </h:panelGrid>
+                    <h:panelGrid columns="1">
+                        <p:graphicImage value="#{clienteBean.caminhoDaImagem}" width="650" height="450"/>
+                        <p:commandButton value="X" onclick="PF('dlgConf')hide();" ajax="true"/>
                     </h:panelGrid>
-                </p:dialog>
-            </h:form>
+                </h:panelGrid>
+            </p:dialog>
+        </h:form>
+        <h:form id="formMotivo">
+            <p:dialog header="Dados" widgetVar="dlgMotivo" showEffect="dlgMotivo">
+                <h:panelGrid columns="1">
+                    <h:panelGrid columns="1">
+                        <h:outputText value="#{cadModeloVeiculoBean.motivoMsg}" />
+                        <p:commandButton value="X" onclick="PF('dlgMotivo')hide();" ajax="true"/>
+                    </h:panelGrid>
+                </h:panelGrid>
+            </p:dialog>
+        </h:form>
     </ui:define>
 
 </ui:composition>
